<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/hacer_convocatoria_entrada_asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:background="@drawable/custom_edit_text_state"
        android:hint="@string/hacer_convocatoria_asunto"
        android:inputType="text"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/hacer_convocatoria_entrada_condominio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:layout_below="@+id/hacer_convocatoria_entrada_asunto"
        android:hint="@string/hacer_convocatoria_condominio"
        android:inputType="text"
        android:background="@drawable/custom_edit_text_state"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/hacer_convocatoria_entrada_ubicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:textSize="20sp"
        android:background="@drawable/custom_edit_text_state"
        android:layout_below="@+id/hacer_convocatoria_entrada_condominio"
        android:hint="@string/hacer_convocatoria_ubicacion"
        android:inputType="text"/>

    <TextView
        android:id="@+id/hacer_convocatoria_entrada_fecha_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:paddingTop="8sp"
        android:background="@drawable/custom_edit_text_state"
        android:layout_below="@+id/hacer_convocatoria_entrada_ubicacion"
        android:hint="@string/hacer_convocatoria_fecha_inicial"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginRight="20sp"
        android:textSize="20sp"
        android:inputType="text"
        android:background="@drawable/custom_edit_text_state"
        android:layout_below="@+id/hacer_convocatoria_entrada_fecha_inicial"
        android:hint="@string/hacer_convocatoria_ubicacion_interna"/>

</RelativeLayout>